# social-post-aggregation-workflow

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
filters/: keywords.py
llm/: provider.py
parser/: post_parser.py
query/: query_engine.py
scraper/: auth.py  facebook.py
storage/: database.py
